MAINTAINERCLEANFILES = Makefile.in

SUBDIRS = 

noinst_LTLIBRARIES = librofl_pipeline_openflow1x_pipeline_flavors.la

librofl_pipeline_openflow1x_pipeline_flavors_ladir = $(includedir)/rofl/datapath/pipeline/openflow/openflow1x/pipeline/flavors

librofl_pipeline_openflow1x_pipeline_flavors_la_HEADERS = \
	of1x_pipeline_generic_pp.h \
	of1x_pipeline_generic.h \
	of1x_pipeline_ofdpa_pp.h
	of1x_pipeline_ofdpa.h


librofl_pipeline_openflow1x_pipeline_flavors_la_SOURCES = \
	of1x_pipeline_generic.c \
	of1x_pipeline_ofdpa.c

